--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -12,16 +12,15 @@
 		
 		<%- include('inc/header') -%>
 
-		<%- include('inc/content/CONTACT') -%>
+		<%- include('inc/content/contacts') -%>
 
-
-	<%- include('inc/footer') -%>
+		<%- include('inc/footer') -%>
 
 	</div>
 
-	<%- include('inc/footer-goToTop') -%>
+		<%- include('inc/footer-goToTop') -%>
 
-	<%- include('inc/footer-scripts') -%>
+		<%- include('inc/footer-scripts') -%>
 
 	</body>
 </html>
