--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-		<%- include("inc/head") %>
+		<%- include("inc/head") -%>
 	<body>
 		
 	<div class="gtco-loader"></div>
@@ -17,13 +17,13 @@
 
 		<%- include('inc/content/subscribe') -%>
 	
-	<%- include('inc/footer.ejs') -%>
+		<%- include('inc/footer.ejs') -%>
 
 	</div>
 
-	<%- include('inc/footer-goToTop') -%>
+		<%- include('inc/footer-goToTop') -%>
 
-	<%- include('inc/footer-scripts') -%>
+		<%- include('inc/footer-scripts') -%>
 
 	</body>
 </html>
