processo de login

--- a/views/inc/footer.ejs
+++ b/views/inc/footer.ejs
@@ -50,9 +50,9 @@
 
             <div class="col-md-12 text-center copyright">
                 <p>
-                    <small class="block">&copy; 2020 Hcode. Todos os Direitos Reservados.</small>
+                    <small class="block">&copy; 2020 Lucena's Code. Todos os Direitos Reservados.</small>
                     <small class="block">Desenvolvido por
-                        <a href="https://www.hcode.com.br" target="_blank">Hcode.com.br</a>
+                        <a href="https://www.lucena'scode.com.br" target="_blank">Lucena's Code.com.br</a>
                     </small>
                 </p>
             </div>
