--- a/views/service.ejs
+++ b/views/service.ejs
@@ -1,32 +1,10 @@
-<!DOCTYPE HTML>
-<html>
+<%- include('inc/page-header') -%>
 
-		<%- include("inc/head") -%>
-	
-	<body>
-		
-	<div class="gtco-loader"></div>
-	
-	<div id="page"></div>
-
-			<%- include('inc/header-menu') -%>
-
-			<%- include('inc/header') -%>
-
-			<%- include('inc/content/services') -%>
+		<%- include('inc/content/services') -%>
 
 			<%- include('inc/content/text') -%>
 
-			<%- include('inc/content/subscribe') -%>
+		<%- include('inc/content/subscribe') -%>
 
-	<%- include('inc/footer.ejs') -%>
-
-	</div>
-
-	<%- include('inc/footer-goToTop') -%>
-
-	<%- include('inc/footer-scripts') -%>
-
-	</body>
-</html>
+<%- include('inc/page-footer') -%>
 
