--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1831,7 +1831,7 @@ form label {
   box-shadow: 0px 1px 20px 0px rgba(0, 0, 0, 0.19);
 }
 .fh5co-card-item:hover img, .fh5co-card-item:focus img {
-  -webkot-transform: scale(1.2);
+  -webkit-transform: scale(1.2);
   -moz-transform: scale(1.2);
   -ms-transform: scale(1.2);
   -o-transform: scale(1.2);
