--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,20 +1,5 @@
-<!DOCTYPE HTML>
-<html>
-
-<%- include("inc/head") -%>
-
-<body>
-
-	<div class="gtco-loader"></div>
-
-	<div id="page">
-
-		<%- include('inc/header-menu') -%>
-
-
-		<%- include('inc/header-index') -%>
-
-
+		<%- include('inc/page-header') -%>
+		
 		<%- include('inc/content/menus') -%>
 
 
@@ -29,15 +14,4 @@
 
 		<%- include('inc/content/subscribe') -%>
 
-
-		<%- include('inc/footer') -%>
-
-	</div>
-
-	<%- include('inc/footer-goToTop') -%>
-
-	<%- include('inc/footer-scripts') -%>
-
-</body>
-
-</html>
+		<%- include('inc/page-footer') -%>
